# dark_tower

./: .codecov.yml  .devloop-pr.json  .env.example  .env.test  .gitattributes  .gitguardian.yaml  .gitignore  AI_DEVELOPMENT.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  clippy.toml  docker-compose.test.yml  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
crates/ac-service/: Cargo.toml
crates/ac-service/fuzz/: Cargo.toml
crates/ac-service/fuzz/fuzz_targets/: jwt_validation.rs  signaling_messages.rs
crates/ac-service/src/: config.rs  errors.rs  lib.rs  main.rs
crates/ac-service/src/actors/: mod.rs
crates/ac-service/src/crypto/: mod.rs
crates/ac-service/src/handlers/: admin_handler.rs  auth_handler.rs  internal_tokens.rs  jwks_handler.rs  mod.rs
crates/ac-service/src/middleware/: auth.rs  http_metrics.rs  mod.rs  org_extraction.rs
crates/ac-service/src/models/: mod.rs
crates/ac-service/src/observability/: metrics.rs  mod.rs
crates/ac-service/src/repositories/: auth_events.rs  mod.rs  organizations.rs  service_credentials.rs  signing_keys.rs  users.rs
crates/ac-service/src/routes/: admin.rs  auth.rs  jwks.rs  mod.rs
crates/ac-service/src/services/: key_management_service.rs  mod.rs  registration_service.rs  token_service.rs  user_service.rs
crates/ac-service/tests/: README.md  audit_log_failures_integration.rs  bcrypt_metrics_integration.rs  chaos_tests.rs  credential_ops_metrics_integration.rs  db_metrics_integration.rs  errors_metric_integration.rs  fault_injection_tests.rs  http_metrics_integration.rs  integration_tests.rs  internal_token_metrics_integration.rs  jwks_metrics_integration.rs  key_rotation_metrics_integration.rs  rate_limit_metrics_integration.rs  token_issuance_service_integration.rs  token_issuance_user_integration.rs  token_validation_integration.rs
crates/ac-service/tests/chaos/: README.md  db_failure_tests.rs  key_rotation_stress_tests.rs
crates/ac-service/tests/common/: jwt_fixtures.rs  mod.rs  test_state.rs
crates/ac-service/tests/fault_injection/: db_failure_tests.rs  key_rotation_stress_tests.rs  mod.rs  slow_query_notes.md
crates/ac-service/tests/integration/: admin_auth_tests.rs  clock_skew_tests.rs  health_tests.rs  internal_token_tests.rs  key_rotation_tests.rs  mod.rs  (+1 more)
crates/ac-test-utils/: Cargo.toml
crates/ac-test-utils/src/: assertions.rs  crypto_fixtures.rs  lib.rs  rotation_time.rs  server_harness.rs  test_ids.rs  token_builders.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  jwt.rs  lib.rs  meeting_token.rs  secret.rs  token_manager.rs  types.rs
crates/devloop-helper/: Cargo.toml
crates/devloop-helper/src/: auth.rs  commands.rs  error.rs  logging.rs  main.rs  ports.rs  protocol.rs
crates/dt-guard/: Cargo.toml
crates/dt-guard/src/: alert_rules.rs  api_version.rs  application_metrics.rs  cite_extract.rs  cross_boundary_classification.rs  cross_boundary_scope.rs  dashboard_panels.rs  env_config.rs  grafana_datasources.rs  gsa_sync.rs  histogram_buckets.rs  ignore.rs  infrastructure_metrics.rs  instrument_skip_all.rs  knowledge_index.rs  kustomize.rs  kustomize_tools.rs  lib.rs  main.rs  metric_coverage.rs  metric_labels.rs  metric_macros.rs  rust_log_secrets.rs  rust_pii.rs  rust_secrets.rs  secret_patterns.rs  test_coverage.rs  test_registration.rs  test_rigidity.rs  todo_tracking.rs  ts_dev_trust.rs  ts_exports_map.rs  ts_metric_naming.rs  ts_pii.rs  ts_secrets.rs  ts_test_removal.rs
crates/dt-guard/tests/: binary_status_surface.rs  cite_extract_e2e.rs  cite_extract_parity.rs  doc_cite_resolve.rs
crates/env-tests/: Cargo.toml  README.md
crates/env-tests/src/: canary.rs  cluster.rs  eventual.rs  lib.rs
crates/env-tests/tests/: 00_cluster_health.rs  10_auth_smoke.rs  20_auth_flows.rs  21_cross_service_flows.rs  22_mc_gc_integration.rs  23_meeting_creation.rs  24_join_flow.rs  25_auth_security.rs  26_mh_quic.rs  30_observability.rs  40_resilience.rs  90_runbook.rs
crates/gc-service/: Cargo.toml
crates/gc-service/src/: config.rs  errors.rs  main.rs
crates/gc-service/tests/: ac_request_metrics_integration.rs  auth_tests.rs  caller_type_rejected_metrics_integration.rs  db_metrics_integration.rs  errors_metric_integration.rs  grpc_mc_call_metrics_integration.rs  http_metrics_integration.rs  jwt_validation_metrics_integration.rs  mc_assignment_metrics_integration.rs  mc_assignment_rpc_tests.rs  mc_repository_tests.rs  meeting_assignment_tests.rs  meeting_create_tests.rs  meeting_creation_metrics_integration.rs  meeting_join_metrics_integration.rs  meeting_tests.rs  mh_registry_tests.rs  mh_selection_metrics_integration.rs  participant_tests.rs  registered_controllers_metrics_integration.rs  token_refresh_integration.rs
crates/gc-test-utils/: Cargo.toml
crates/gc-test-utils/src/: lib.rs  server_harness.rs
crates/global-controller/: Cargo.toml
crates/global-controller/src/: config.rs  errors.rs  lib.rs  main.rs
crates/global-controller/tests/: auth_tests.rs  health_tests.rs  mc_assignment_rpc_tests.rs  mc_repository_tests.rs  meeting_assignment_tests.rs  meeting_tests.rs  mh_registry_tests.rs
crates/mc-test-utils/: Cargo.toml
crates/mc-test-utils/src/: jwt_test.rs  lib.rs  mock_gc.rs  mock_mh.rs  mock_redis.rs
crates/media-protocol/: Cargo.toml
crates/media-protocol/fuzz/: Cargo.toml
crates/media-protocol/src/: codec.rs  frame.rs  lib.rs  stream.rs
crates/meeting-controller/: Cargo.toml
crates/meeting-controller/src/: config.rs  errors.rs  lib.rs  main.rs
crates/meeting-controller/tests/: gc_integration.rs  heartbeat_tasks.rs
crates/mh-service/: Cargo.toml
crates/mh-service/src/: config.rs  errors.rs  lib.rs  main.rs  token_refresh_metrics.rs
crates/mh-service/tests/: auth_layer_integration.rs  errors_grpc_metrics_integration.rs  gc_integration.rs  mc_client_integration.rs  mc_notifications_metric_integration.rs  register_meeting_integration.rs  token_refresh_integration.rs  webtransport_accept_loop_integration.rs  webtransport_integration.rs
crates/proto-gen/: Cargo.toml  build.rs
crates/proto-gen/src/: lib.rs
(+1120 files in other folders)
