[package]
name = "ac-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[lib]
name = "ac_service"
path = "src/lib.rs"

[[bin]]
name = "auth-controller"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ring = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }

# Additional dependencies for auth controller
base64 = "0.21"

# Local dependencies
common = { path = "../common" }

[dev-dependencies]
# Testing utilities
ac-test-utils = { path = "../ac-test-utils" }
anyhow = "1.0"

# Test framework
tokio = { workspace = true, features = ["test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1"

# Benchmarking
criterion = { workspace = true }
futures = "0.3.31"
