[package]
name = "ac-test-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP testing
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "timeout"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Metrics (for test server initialization)
metrics-exporter-prometheus = "0.16"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Cryptography (for test fixtures)
ring = { workspace = true }
base64 = "0.22"

# JWT
jsonwebtoken = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Local dependencies
ac-service = { path = "../ac-service" }

[lib]
name = "ac_test_utils"
path = "src/lib.rs"
