[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Enable test utilities (e.g., TokenReceiver::from_test_channel)
test-utils = []

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

# Additional dependencies
rand = "0.8"
secrecy = { workspace = true }
base64 = { workspace = true }

# HTTP client for token management
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }
wiremock = "0.6"
