[package]
name = "gc-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "timeout"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }

# gRPC server/client for MC registration
tonic = { workspace = true }

# Async trait for mock implementations
async-trait = "0.1"

# Cancellation tokens for graceful shutdown
tokio-util = { workspace = true }

# HTTP client for JWKS fetching and AC communication
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Base64 encoding for JWK keys
base64 = "0.22"

# CSPRNG for meeting code and join token secret generation
ring = { workspace = true }

# Hex encoding for join_token_secret
hex = { workspace = true }

# Metrics (ADR-0011 Observability)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Local dependencies
common = { path = "../common" }
proto-gen = { path = "../proto-gen" }

[lib]
name = "gc_service"
path = "src/lib.rs"

[[bin]]
name = "gc-service"
path = "src/main.rs"

[dev-dependencies]
criterion = { workspace = true }
gc-test-utils = { path = "../gc-test-utils" }
anyhow = { workspace = true }
http-body-util = "0.1"
wiremock = "0.6"
futures = "0.3"
tower = { workspace = true, features = ["util"] }
metrics-util = "0.18"
# Re-export for integration tests (metrics-exporter-prometheus is also in deps)
metrics-exporter-prometheus = "0.16"
