[package]
name = "global-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "timeout"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }

# gRPC server for MC registration
tonic = { workspace = true }

# Cancellation tokens for graceful shutdown
tokio-util = { workspace = true }

# HTTP client for JWKS fetching and AC communication
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Base64 encoding for JWK keys
base64 = "0.22"

# CSPRNG for guest ID generation
ring = { workspace = true }

# Local dependencies
common = { path = "../common" }
proto-gen = { path = "../proto-gen" }

[dev-dependencies]
criterion = { workspace = true }
gc-test-utils = { path = "../gc-test-utils" }
anyhow = { workspace = true }
http-body-util = "0.1"
wiremock = "0.6"
futures = "0.3"
