[package]
name = "mh-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
quinn = { workspace = true }
wtransport = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

# gRPC for GC communication and MC→MH service
tonic = { workspace = true }

# Tower middleware (for async auth Layer/Service on gRPC requests)
tower = { workspace = true }

# Metrics (ADR-0011 Observability)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# HTTP server for health endpoints and metrics
axum = { workspace = true }

# Time utilities
chrono = { workspace = true }

# Local dependencies
common = { path = "../common" }
proto-gen = { path = "../proto-gen" }
media-protocol = { path = "../media-protocol" }

[[bin]]
name = "mh-service"
path = "src/main.rs"

[dev-dependencies]
criterion = { workspace = true }
# HTTP testing for health endpoint integration tests — tower is now a regular dep
# Stream utilities for mock gRPC server
tokio-stream = "0.1"
# Need test-util feature for tokio::time::pause/advance in tests
tokio = { version = "1.40", features = ["full", "test-util"] }
# Metrics test recorder for integration tests
metrics-util = "0.18"
# Enable test-utils feature for common (e.g., TokenReceiver::from_test_channel)
common = { path = "../common", features = ["test-utils"] }
# JWT validation testing (Ed25519 signing, JWKS mocking)
wiremock = "0.6"
jsonwebtoken = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
