[package]
name = "mh-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
quinn = { workspace = true }
wtransport = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

# gRPC for GC communication and MC→MH service
tonic = { workspace = true }

# Tower middleware (for async auth Layer/Service on gRPC requests)
tower = { workspace = true }

# Metrics (ADR-0011 Observability)
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# HTTP server for health endpoints and metrics
axum = { workspace = true }

# Time utilities
chrono = { workspace = true }

# Local dependencies
common = { path = "../common" }
proto-gen = { path = "../proto-gen" }
media-protocol = { path = "../media-protocol" }

[[bin]]
name = "mh-service"
path = "src/main.rs"

[dev-dependencies]
criterion = { workspace = true }
# HTTP testing for health endpoint integration tests — tower is now a regular dep
# Stream utilities for mock gRPC server
tokio-stream = "0.1"
# Need test-util feature for tokio::time::pause/advance in tests
tokio = { workspace = true, features = ["test-util"] }
# Metrics test recorder for integration tests
metrics-util = "0.18"
# Enable test-utils feature for common (e.g., TokenReceiver::from_test_channel)
common = { path = "../common", features = ["test-utils"] }
# JWT validation testing (Ed25519 signing, JWKS mocking)
wiremock = "0.6"
jsonwebtoken = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
# WebTransport client for integration tests: enables with_no_cert_validation
# for self-signed server certs (test-only; production uses real TLS certs).
wtransport = { workspace = true, features = ["dangerous-configuration"] }
# Self-signed TLS cert generation for the accept-loop component test — the
# rig writes PEMs to a tempdir and passes them through production
# `Identity::load_pemfiles` (same code path as runtime). `wtransport`'s
# in-memory `Identity::self_signed` is not usable because the production
# `WebTransportServer::bind()` reads PEMs from disk.
rcgen = "0.13"
# TempDir for scoping PEMs to the test lifetime with automatic cleanup.
tempfile = "3"
