[package]
name = "proto-gen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace dependencies
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
